hello/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: hello
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: NodePort
  selector:
    app: nginx
