hello/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: hello
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "hello-static-ip"
spec:
  tls:
  - hosts:
    - echo.DOMAIN_NAME
    - www.DOMAIN_NAME
    secretName: hello-tls
  rules:
  - host: echo.DOMAIN_NAME
    http:
      paths:
      - path: /*
        backend:
          serviceName: echoserver
          servicePort: 80
  - host: www.DOMAIN_NAME
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
